fix: arrow jump mobile

--- a/assets/styling/main.sass
+++ b/assets/styling/main.sass
@@ -282,7 +282,7 @@ img[lazy="loaded"]
           margin-bottom: var(--spacing-three)
       &-Nav
         position: fixed
-        top: 50%
+        top: 50vh
         padding: var(--spacing-two)
         transform: translateY(-50%)
         color: white
